overflow tablet navbar fix
overflow tablet navbar fix

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -102,3 +102,7 @@
         top: 20px;
     }
 }
+.Navbar {
+        position: relative;
+        z-index: 1000;
+    }
